# Zappy

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  compile_commands.json  graphical_test.py  possible_issues.md
.github/workflows/: automatic.yml
Ai/: README.md  ai_test.py  broadcast.py  commands.py  connection.py  main.py  player.py  resources.py  vision.py  zappy_ai
Ai/basic_ai/: basic_ai_algo.py  utils.py
Ai/heuristic_ai/: ai.py  ai_comms.py  ai_inventory.py  ai_ritual.py  ai_vision.py  broadcast.py  client.py  commands.py  config.py  connection.py  constants.py  main.py  player.py  resources.py  state_machine.py  vision.py
Ai/heuristic_ai/player/: actions.py  state.py
Gui/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  Doxyfile.in  Makefile  README.md  export_presets.cfg  main.cpp  mock_server.py
Gui/assets/Textures/: Dirt_05-256x256.png.import
Gui/assets/models/resources/: Meat2.fbx.import  SimplePolygon_Minerals.fbx  SimplePolygon_Minerals.fbx.import
Gui/assets/models/resources/Textures/: Meat2UV.png.import  SimplePolygon_MultiColorPalette.png.import
Gui/assets/models/skeleton_player/: skeleton.fbx.import  skeleton_dance.fbx  skeleton_dance.fbx.import  skeleton_death.fbx  skeleton_death.fbx.import  skeleton_incant.fbx  skeleton_incant.fbx.import
Gui/assets/models/skeleton_player/Textures/: LPolyPallete.png.import
Gui/cmake/: toolchain-mingw64.cmake
Gui/docs/: architecture.md
Gui/scenes/entities/: egg_entity.tscn  player_entity.tscn
Gui/scenes/entities/players/skeleton_player/: player_entity_skeleton.tscn  skeleton.tscn
Gui/scenes/entities/resources/: deraumere.res  food.res  linemate.res  mendiane.res  phiras.res  sibur.res  thystame.res
Gui/scenes/entities/vfx/: broadcast_ripple_vfx.tscn
Gui/scenes/ui/: connect_dialog.tscn  hud_root.tscn  inventory_panel.tscn  team_panel.tscn  time_panel.tscn  world_status_panel.tscn
Gui/scenes/world/: entity_manager.tscn  terrain.gdshader.uid  tile_markers.tscn  world.tscn
Gui/src/: ZappyWorld.cpp  ZappyWorld.hpp  exceptions.hpp  main.cpp  register_types.cpp
Gui/src/camera/: Camera.cpp  Camera.hpp  rts_camera.cpp  selection_controller.cpp  selection_controller.hpp
Gui/src/entities/: egg_entity.cpp  egg_entity.hpp  entity_manager.cpp  entity_manager.hpp  player_entity.cpp  player_entity.hpp
Gui/src/network/: MessageQueue.hpp  NetworkClient.cpp  NetworkClient.hpp  ServerMessage.hpp  protocol_parser.cpp  protocol_parser.hpp  server_message.hpp
Gui/src/renderer/: Renderer.cpp  Renderer.hpp
Gui/src/renderer/device/: AllocatorContext.cpp  AllocatorContext.hpp  DeviceContext.cpp  DeviceContext.hpp  VkCheck.cpp  VkCheck.hpp
Gui/src/renderer/pipeline/: Pipeline.cpp  Pipeline.hpp
Gui/src/renderer/scene/: DepthResources.cpp  DepthResources.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  UboMvp.hpp  UniformBuffer.cpp  UniformBuffer.hpp
Gui/src/renderer/sync/: FrameSync.cpp  FrameSync.hpp
Gui/src/renderer/window/: SwapchainContext.cpp  SwapchainContext.hpp  WindowContext.cpp  WindowContext.hpp
Gui/src/shaders/: triangle.frag  triangle.vert
Gui/src/ui/: broadcast_log.cpp  broadcast_log.hpp  connect_dialog.cpp  connect_dialog.hpp  hud_root.hpp  inventory_panel.cpp  inventory_panel.hpp  team_panel.hpp  time_panel.cpp  time_panel.hpp  world_status_panel.cpp  world_status_panel.hpp
Gui/src/vfx/: broadcast_ripple_vfx.cpp  broadcast_ripple_vfx.hpp
Gui/src/world/: FrameData.hpp  WorldState.cpp  WorldState.hpp  day_night_cycle.cpp  day_night_cycle.hpp  map_terrain.cpp  map_terrain.hpp  tile_markers.cpp  tile_markers.hpp  world_state.hpp  world_types.hpp
Gui/tests/: mock_server.py  test_message_queue.cpp  test_network.cpp
Server/: Makefile  main.cpp
Server/include/: CircularBuffer.hpp  Client.hpp  Egg.hpp  Gui.hpp  NetworkServer.hpp  Parse.hpp  Player.hpp  Server.hpp  Struct.hpp  Team.hpp  Tiles.hpp
Server/include/Client/: Client.hpp  Gui.hpp  NetworkClient.hpp  Player.hpp
Server/include/Map/: Tiles.hpp
Server/include/Observer/: ISubject.hpp  Subject.hpp
Server/include/Queue/: SendMessageQueue.hpp
Server/include/Team/: Egg.hpp  Team.hpp
Server/src/: CircularBuffer.cpp  Polling.cpp  Server.cpp  game_loop.cpp  server_helper.cpp
Server/src/Clients/: Client.cpp  NetworkClient.cpp
Server/src/Clients/Gui/: Gui.cpp  GuiCommands.cpp  GuiPassive.cpp
Server/src/Clients/Player/: Actions.cpp  Incantation.cpp  Movement.cpp  Player.cpp
Server/src/Game/: Tiles.cpp  game_loop.cpp
Server/src/Queue/: Queue.cpp
Server/src/Server/: NetworkServer.cpp  Polling.cpp  client_helpers.cpp  server_helper.cpp
docs/: README.md
zappy-gui/: .clangd  .gitignore  CMakeLists.txt  CREDITS.md  Doxyfile.in  Makefile  icon.svg.import  project.godot
zappy-gui/assets/grass/BinbunGrass/src/texture/basic/: grass_basic_01.png.import  grass_basic_02.png.import  grass_basic_03.png.import  grass_basic_04.png.import  grass_basic_atlas.png.import
zappy-gui/scenes/entities/: player_entity.tscn
zappy-gui/scenes/ui/: broadcast_log.tscn  connect_dialog.tscn  end_game_overlay.tscn  hud_root.tscn
zappy-gui/scenes/world/: world.tscn
zappy-gui/src/: ZappyWorld.cpp  register_types.cpp  register_types.hpp
zappy-gui/src/camera/: rts_camera.hpp
zappy-gui/src/entities/: entity_manager.cpp  entity_manager.hpp
zappy-gui/src/network/: protocol_parser.cpp  protocol_parser.hpp  zappy_connection.cpp  zappy_connection.hpp
zappy-gui/src/ui/: connect_dialog.hpp  end_game_overlay.cpp  end_game_overlay.hpp  hud_root.cpp  team_panel.cpp
zappy-gui/src/world/: map_terrain.cpp  map_terrain.hpp  tile_markers.hpp  world_state.cpp  world_state.hpp
